--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-alura" src="lo2go_size_invert.jpg" alt="logo da alura start">
+        <img class="cabecalho-alura" src="logo_size20.jpg" alt="logo da alura start">
         <img class="cabecalho-imagem" src="logocivico.png" alt="logo da alura start">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
