--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="cabecalho">
         <img class="cabecalho-alura" src="test2.png" alt="logo da alura start">
-        <img class="cabecalho-imagem" src="logocivico.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="logo_size_invert.jpg" alt="logo da alura start">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
