--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Colégio Cívico Militar Helena Viana Sundin</h2>
-            <p class="escola-texto-um">O Colégio Helena Viana Sundin foi fundado em 1953 e tem como objetivo ensinar e contribuir para o crescimento do aprendizado do estudante, através do Novo Ensino Médio e Fundamental II.</p>
-            <p class="escola-texto-dois">“As escolas cívico-militares são uma opção adicional no roteiro do ensino público para criar um ambiente com mais segurança, onde os pais vão ter um conforto em saber que os agentes vão desenvolver o civismo, cantar o hino nacional e fazer com que a disciplina ajude a ser um vetor da melhoria da qualidade de ensino”</p>
+            <h2 class="escola-titulo">THE BEST MUSIC</h2>
+            <p class="escola-texto-um">O "THE BEST MUSIC" tem como objetivo mostras os DOWNLOADS das melhores músicas.</p>
+            <p class="escola-texto-dois">“Caso sua música não esteja aqui não se entristeça pois ela pode ser adicionada <3”</p>
             
         
     </section>
