--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">THE BEST MUSIC</h2>
-            <p class="escola-texto-um">O "THE BEST MUSIC" tem como objetivo mostras os DOWNLOADS das melhores músicas do momento.</p>
+            <p class="escola-texto-um">O "THE BEST MUSIC" tem como objetivo mostras os DOWNLOADS das melhores músicas do momento.
+                Caso sua música não esteja aqui não se entristeça pois ela pode ser adicionada <3
+            </p>
             <p class="escola-texto-dois">“Caso sua música não esteja aqui não se entristeça pois ela pode ser adicionada <3”</p>
             
         
