--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-alura" src="test2.png" alt="logo da alura start">
+        <img class="cabecalho-logo" src="test2.png" alt="logo da alura start">
         <img class="cabecalho-imagem" src="logo_size_invert.jpg" alt="logo da alura start">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
-    <section class="escola">
-        <div class="escola-div-conteudo">
+    <section class="music">
+        <div class="music-div-conteudo">
             <h2 class="escola-titulo">THE BEST MUSIC</h2>
             <p class="escola-texto-um">O "THE BEST MUSIC" tem como objetivo mostras os DOWNLOADS das melhores músicas do momento.
                 Caso sua música não esteja aqui não se entristeça pois ela pode ser adicionada <3
@@ -29,12 +29,12 @@
             
         
     </section>
-    <section class="estudante">
-        <h2 class="estudante-titulo">Quem são nossos estudantes do 2°C - Programação II?</h2>
-        <div class="estudante-todos">
-            <div class="estudante-div">
-                <img class="estudante-imagem" src="prof.antonio.jpeg" alt="foto do Antonio">
-                <h3 class="estudante-nome">Professor Antonio</h3>
+    <section class="music">
+        <h2 class="music-titulo">Quem são nossos estudantes do 2°C - Programação II?</h2>
+        <div class="all-music-todos">
+            <div class="music-div">
+                <img class="music-imagem" src="prof.antonio.jpeg" alt="foto do Antonio">
+                <h3 class="misic-nome">Professor Antonio</h3>
                 <a href="https://github.com/antoniocam84/antoniocam84"><img class="estudante-icone" src="github.png" alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/ana-luiza-o-09566432a/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
                 <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
