--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="music">
         <div class="music-div-conteudo">
             <h2 class="escola-titulo">THE BEST MUSIC</h2>
-            <p class="escola-texto-um">O "THE BEST MUSIC" tem como objetivo mostras os DOWNLOADS das melhores músicas do momento.
+            <p class="escola-texto-um">  O "THE BEST MUSIC" tem como objetivo mostras os DOWNLOADS das melhores músicas do momento.
                 Caso sua música não esteja aqui não se entristeça pois ela pode ser adicionada <3
             </p>
             
@@ -30,7 +30,7 @@
         
     </section>
     <section class="music">
-        <h2 class="music-titulo">Quem são nossos estudantes do 2°C - Programação II?</h2>
+        <h2 class="music-titulo">Quais são nossas músicas do momento?</h2>
         <div class="all-music-todos">
             <div class="music-div">
                 <img class="music-imagem" src="prof.antonio.jpeg" alt="foto do Antonio">
