--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <img class="cabecalho-logo" src="test2.png" alt="logo da alura start">
         <img class="cabecalho-imagem" src="logo_size_invert.jpg" alt="logo da alura start">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">Estudante</li>
+            <li class="cabecalho-lista-item">BEST</li>
+            <li class="cabecalho-lista-item">MUSIC</li>
         </ul>
     </header>
     <section class="music">
