--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="music-div">
                 <img class="music-imagem" src="prof.antonio.jpeg" alt="foto do Antonio">
                 <h3 class="misic-nome">Professor Antonio</h3>
-                <a href="https://github.com/antoniocam84/antoniocam84"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+                <a href="https://youtu.be/bG9z-atG7gc?si=k0bz2zyGHvN8bduM"><img class="estudante-icone" src="imgs/youtube-logo.png" alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/ana-luiza-o-09566432a/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
                 <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
             </div>
