--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <a href="https://youtu.be/bG9z-atG7gc?si=k0bz2zyGHvN8bduM"><img class="estudante-icone" src="imgs/youtube-logo.png" alt="icone github"></a>
                 <a href="https://www.instagram.com/7cloudsdaily/#"><img class="estudante-icone" src="imgs/instagram.png" alt="icone linkedin"></a>
                 <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+                <download = filename; a.click(Eurythmics - Sweet Dreams (Lyrics).mp3);></download>
             </div>
        
         
