--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
             <div class="music-div">
                 <img class="music-imagem" src="prof.antonio.jpeg" alt="foto do Antonio">
                 <h3 class="misic-nome">SWEET DREAMS</h3>
-                <a href="https://youtu.be/bG9z-atG7gc?si=k0bz2zyGHvN8bduM"><img class="estudante-icone" src="imgs/youtube-logo.png" alt="icone github"></a>
-                <a href="https://www.instagram.com/7cloudsdaily/#"><img class="estudante-icone" src="imgs/instagram.png" alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
-                <a href="download = filename; a.click(Eurythmics - Sweet Dreams (Lyrics).mp3);"></download>
+                <a href="https://youtu.be/bG9z-atG7gc?si=k0bz2zyGHvN8bduM"><img class="music-icon" src="imgs/youtube-logo.png" alt="icone github"></a>
+                <a href="https://www.instagram.com/7cloudsdaily/#"><img class="music-icon" src="imgs/instagram.png" alt="icone linkedin"></a>
+                <a href="download = filename; a.click(Eurythmics - Sweet Dreams (Lyrics).mp3);"><img class="music-icon" src="imgs/downloads.png"></download>
             </div>
        
         
