--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h3 class="misic-nome">SWEET DREAMS</h3>
                 <a href="https://youtu.be/bG9z-atG7gc?si=k0bz2zyGHvN8bduM"><img class="music-icon" src="imgs/youtube-logo.png" alt="icone github"></a>
                 <a href="https://www.instagram.com/7cloudsdaily/#"><img class="music-icon" src="imgs/instagram.png" alt="icone linkedin"></a>
-                <a href="download = filename; a.click(Eurythmics - Sweet Dreams (Lyrics).mp3);"><img class="music-icon" src="imgs/downloads.png"></a>
+                <a href="https://youtu.be/bG9z-atG7gc?si=rfJ6VD59HHhy0tqq" download><img src="https://youtu.be/bG9z-atG7gc?si=rfJ6VD59HHhy0tqq" alt=""> </a>
             </div>
        
         
