--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2 class="music-titulo">Quais são nossas músicas do momento?</h2>
         <div class="all-music-todos">
             <div class="music-div">
-                <img class="music-imagem" src="prof.antonio.jpeg" alt="foto do Antonio">
+                <img class="music-imagem" src="imgs/hqdefault.jpg" alt="foto do Antonio">
                 <h3 class="misic-nome">SWEET DREAMS</h3>
                 <a href="https://youtu.be/bG9z-atG7gc?si=k0bz2zyGHvN8bduM"><img class="music-icon" src="imgs/youtube-logo.png" alt="icone github"></a>
                 <a href="https://www.instagram.com/7cloudsdaily/#"><img class="music-icon" src="imgs/instagram.png" alt="icone linkedin"></a>
