--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <div class="music-div">
                 <img class="music-imagem" src="imgs/hqdefault.jpg" alt="foto do Antonio">
                 <h3 class="misic-nome">SWEET DREAMS</h3>
-                <a href="https://youtu.be/bG9z-atG7gc?si=k0bz2zyGHvN8bduM"><img class="music-icon" src="imgs/youtube-logo.png" alt="icone youtube"></a>
-                <a href="https://www.instagram.com/7cloudsdaily/#"><img class="music-icon" src="imgs/instagram.png" alt="icone instagram"></a>
-                <a href="Eurythmics - Sweet Dreams (Lyrics).mp3" download><img class="music-icon" src="imgs/downloads.png" alt="icon download"> </a>
+                <a href="https://youtu.be/bG9z-atG7gc?si=k0bz2zyGHvN8bduM"><img class="music-icon" src="youtube-logo.png" alt="icone youtube"></a>
+                <a href="https://www.instagram.com/7cloudsdaily/#"><img class="music-icon" src="instagram.png" alt="icone instagram"></a>
+                <a href="Eurythmics - Sweet Dreams (Lyrics).mp3" download><img class="music-icon" src="downloads.png" alt="icon download"> </a>
             </div>
        
         
