--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-logo" src="test2.png" alt="logo the best music">
-        <img class="cabecalho-imagem" src="logo_size_invert.jpg" alt="logo the best music">
+        <img class="cabecalho-logo" src="imgs/test2.png" alt="logo the best music">
+        <img class="cabecalho-imagem" src="imgs/logo_size_invert.jpg" alt="logo the best music">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">BEST</li>
             <li class="cabecalho-lista-item">MUSIC</li>
