--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <div class="music-div">
                 <img class="music-imagem" src="imgs/hqdefault.jpg" alt="foto da música SWEET DREAMS">
                 <h3 class="music-nome">SWEET DREAMS</h3>
-                <a href="https://youtu.be/bG9z-atG7gc?si=k0bz2zyGHvN8bduM"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+                <a href="https://youtu.be/2ydCvkxuNm4?si=NzF2J1uBR9ockIcE"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
                 <a href="https://www.instagram.com/7cloudsdaily/#"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
-                <a href="Eurythmics - Sweet Dreams (Lyrics).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+                <a href=＊NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack).mp3"" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
     
       <span></span>
