--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h3 class="music-nome">*NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack)</h3>
                 <a href="https://youtu.be/2ydCvkxuNm4?si=NzF2J1uBR9ockIcE"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
                 <a href="https://www.instagram.com/7cloudsdaily/#"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
-                <a href=＊NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack).mp3"" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+                <a href="＊NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
     
       <span></span>
