--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
        
         
             <div class="music-div">
-                <img class="music-imagem" src="imgs/hqdefault.jpg" alt="foto da música *NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack)">
+                <img class="music-imagem" src="imgs/bye.jpg" alt="foto da música *NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack)">
                 <h3 class="music-nome">*NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack)</h3>
                 <a href="https://youtu.be/2ydCvkxuNm4?si=NzF2J1uBR9ockIcE"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
                 <a href="https://www.instagram.com/7cloudsdaily/#"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
