--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <li class="cabecalho-lista-item">MUSIC</li>
         </ul>
     </header>
-    <section class="music">
-        <div class="music-div-conteudo">
-            <h2 class="music-titulo">THE BEST MUSIC</h2>
-            <p class="music-texto-um">  O "THE BEST MUSIC" tem como objetivo mostras os DOWNLOADS das melhores músicas do momento.
+    <section class="musica2">
+        <div class="musica2-div-conteudo">
+            <h2 class="musica2-titulo">THE BEST MUSIC</h2>
+            <p class="musica2-texto-um">  O "THE BEST MUSIC" tem como objetivo mostras os DOWNLOADS das melhores músicas do momento.
                 Caso sua música não esteja aqui não se entristeça pois ela pode ser adicionada <3</p>             
     </section>
     <section class="music">
