--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
                 <a href="https://www.instagram.com/7cloudsdaily/#"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
                 <a href="＊NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
+
+            <div class="music-div">
+                <img class="music-imagem" src="imgs/i stil.jpg alt="foto da música Elton John - I'm Still Standing (Lyrics)">
+                <h3 class="music-nome">Elton John - I'm Still Standing (Lyrics)</h3>
+                <a href="https://youtu.be/MJ_aPtt4U8M?si=6U8P1LKhYlNnYEee"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+                <a href="https://www.instagram.com/jvbsucks/"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
+                <a href="Elton John - I'm Still Standing (Lyrics).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+            </div>
     
       <span></span>
         <span></span>
