--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/i stil.jpg alt="foto da música Elton John - I'm Still Standing (Lyrics)">
+                <img class="music-imagem" src="imgs/still.jpg"foto da música Elton John - I'm Still Standing (Lyrics)">
                 <h3 class="music-nome">Elton John - I'm Still Standing (Lyrics)</h3>
                 <a href="https://youtu.be/MJ_aPtt4U8M?si=6U8P1LKhYlNnYEee"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
                 <a href="https://www.instagram.com/jvbsucks/"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
