--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
                 <a href="https://www.instagram.com/jvbsucks/"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
                 <a href="Elton John - I'm Still Standing (Lyrics).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
+
+            <div class="music-div">
+                <img class="music-imagem" src="imgs/setor.jpg"foto da música VAPO NO SETOR">
+                <h3 class="music-nome">VAPO NO SETOR</h3>
+                <a href="https://youtu.be/997Md4VggDs?si=zNkBTufn4cZe8q81"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+                <a href="https://www.instagram.com/djanxvarbr/"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
+                <a href="VAPO NO SETOR.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+            </div>
     
       <span></span>
         <span></span>
