--- a/index.html
+++ b/index.html
@@ -66,6 +66,22 @@
                 <a href=""><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
                 <a href="JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation @JAWNY.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
+
+            <div class="music-div">
+                <img class="music-imagem" src="imgs/honey pie.jpg"foto da The Living Tombstone - My Ordinary Life (Lyrics/Vietsub)">
+                <h3 class="music-nome">The Living Tombstone - My Ordinary Life (Lyrics/Vietsub)</h3>
+                <a href="https://youtu.be/H_6JU6vJMS0?si=LeWXD1IcIOlGCDYK"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+               
+                <a href="The Living Tombstone - My Ordinary Life (Lyrics⧸Vietsub).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+            </div>
+
+            <div class="music-div">
+                <img class="music-imagem" src="imgs/honey pie.jpg"foto da JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation ‪@JAWNY‬">
+                <h3 class="music-nome">JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation ‪@JAWNY‬</h3>
+                <a href="https://youtu.be/997Md4VggDs?si=zNkBTufn4cZe8q81"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+                <a href=""><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
+                <a href="JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation @JAWNY.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+            </div>
     
       <span></span>
         <span></span>
