--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <img class="music-imagem" src="imgs/honey pie.jpg"foto da JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation ‪@JAWNY‬">
                 <h3 class="music-nome">JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation ‪@JAWNY‬</h3>
                 <a href="https://youtu.be/997Md4VggDs?si=zNkBTufn4cZe8q81"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
-                <a href=""><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
+                <a href="https://www.instagram.com/seanway_studio/"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
                 <a href="JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation @JAWNY.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
 
@@ -76,11 +76,19 @@
             </div>
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/honey pie.jpg"foto da JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation ‪@JAWNY‬">
-                <h3 class="music-nome">JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation ‪@JAWNY‬</h3>
-                <a href="https://youtu.be/997Md4VggDs?si=zNkBTufn4cZe8q81"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
-                <a href=""><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
-                <a href="JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation @JAWNY.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+                <img class="music-imagem" src="imgs/honey pie.jpg"foto da Street Corner Renaissance - Life Could Be A Dream">
+                <h3 class="music-nome">Street Corner Renaissance - Life Could Be A Dream</h3>
+                <a href="https://youtu.be/n-miJQUD9l4?si=LbGlfyEpFVRop-Jk"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+               
+                <a href="Street Corner Renaissance - Life Could Be A Dream.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+            </div>
+
+            <div class="music-div">
+                <img class="music-imagem" src="imgs/honey pie.jpg"foto da Street Corner Renaissance - Life Could Be A Dream">
+                <h3 class="music-nome">Street Corner Renaissance - Life Could Be A Dream</h3>
+                <a href="https://youtu.be/n-miJQUD9l4?si=LbGlfyEpFVRop-Jk"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+                <a href="https://youtu.be/n-miJQUD9l4?si=LbGlfyEpFVRop-Jk"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
+                <a href="Street Corner Renaissance - Life Could Be A Dream.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
     
       <span></span>
