--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/honey pie.jpg"foto da The Living Tombstone - My Ordinary Life (Lyrics/Vietsub)">
+                <img class="music-imagem" src="imgs/my ordinary life.jpg"foto da The Living Tombstone - My Ordinary Life (Lyrics/Vietsub)">
                 <h3 class="music-nome">The Living Tombstone - My Ordinary Life (Lyrics/Vietsub)</h3>
                 <a href="https://youtu.be/H_6JU6vJMS0?si=LeWXD1IcIOlGCDYK"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
                
@@ -76,7 +76,7 @@
             </div>
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/honey pie.jpg"foto da Street Corner Renaissance - Life Could Be A Dream">
+                <img class="music-imagem" src="imgs/life.jpg"foto da Street Corner Renaissance - Life Could Be A Dream">
                 <h3 class="music-nome">Street Corner Renaissance - Life Could Be A Dream</h3>
                 <a href="https://youtu.be/n-miJQUD9l4?si=LbGlfyEpFVRop-Jk"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
                
