--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
             </div>
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/honey pie.jpg"foto da Street Corner Renaissance - Life Could Be A Dream">
-                <h3 class="music-nome">Street Corner Renaissance - Life Could Be A Dream</h3>
-                <a href="https://youtu.be/n-miJQUD9l4?si=LbGlfyEpFVRop-Jk"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
-                <a href="https://youtu.be/n-miJQUD9l4?si=LbGlfyEpFVRop-Jk"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
-                <a href="Street Corner Renaissance - Life Could Be A Dream.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+                <img class="music-imagem" src="imgs/mett.jpg"foto da MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED]">
+                <h3 class="music-nome">MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED]</h3>
+                <a href="https://youtu.be/5UtVzb8ZkmY?si=C3HfAPcmPqdN6up6"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+                <a href="https://www.instagram.com/ikalcetoo/"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
+                <a href="MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED].mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
     
       <span></span>
