--- a/index.html
+++ b/index.html
@@ -90,6 +90,14 @@
                 <a href="https://www.instagram.com/ikalcetoo/"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
                 <a href="MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED].mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
+
+            <div class="music-div">
+                <img class="music-imagem" src="imgs/spook.jpg"foto da fennecxx, DJ ALEX - SPOOKY (Official Music)">
+                <h3 class="music-nome"fennecxx, DJ ALEX - SPOOKY (Official Music)</h3>
+                <a href="https://youtu.be/Yw2g6_uySOA?si=FBEVOF_9otNegvXh"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+                <a href="https://www.instagram.com/fennecxx"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
+                <a href="fennecxx, DJ ALEX - SPOOKY (Official Music).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+            </div>
     
       <span></span>
         <span></span>
