--- a/index.html
+++ b/index.html
@@ -100,11 +100,19 @@
             </div>
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/spook.jpg"foto da fennecxx, DJ ALEX - SPOOKY (Official Music)">
-                <h3 class="music-nome"fennecxx, DJ ALEX - SPOOKY (Official Music)</h3>
-                <a href="https://youtu.be/Yw2g6_uySOA?si=FBEVOF_9otNegvXh"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+                <img class="music-imagem" src="imgs/ZN FODÁSTICA 2 - TIKTOK VERSION.jpg"foto da ZN FODÁSTICA 2 - TIKTOK VERSION">
+                <h3 class="music-nome">ZN FODÁSTICA 2 - TIKTOK VERSION</h3>
+                <a href="https://youtu.be/DhbNBA4gBM0?si=jqbJ7cENulqAdGC1"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+              
+                <a href="ZN FODÁSTICA 2 - TIKTOK VERSION.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+            </div>
+
+            <div class="music-div">
+                <img class="music-imagem" src="imgs/ZN FODÁSTICA 2 - TIKTOK VERSION.jpg"foto da ZN FODÁSTICA 2 - TIKTOK VERSION">
+                <h3 class="music-nome">ZN FODÁSTICA 2 - TIKTOK VERSION</h3>
+                <a href="https://youtu.be/DhbNBA4gBM0?si=jqbJ7cENulqAdGC1"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
                 <a href="https://www.instagram.com/fennecxx"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
-                <a href="fennecxx, DJ ALEX - SPOOKY (Official Music).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+                <a href="ZN FODÁSTICA 2 - TIKTOK VERSION.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
     
       <span></span>
