--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
             </div>
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/ZN FODÁSTICA 2 - TIKTOK VERSION.jpg"foto da ZN FODÁSTICA 2 - TIKTOK VERSION">
-                <h3 class="music-nome">ZN FODÁSTICA 2 - TIKTOK VERSION</h3>
-                <a href="https://youtu.be/DhbNBA4gBM0?si=jqbJ7cENulqAdGC1"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
-                <a href="https://www.instagram.com/fennecxx"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
-                <a href="ZN FODÁSTICA 2 - TIKTOK VERSION.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+                <img class="music-imagem" src="imgs/ZN FODÁSTICA 2 - TIKTOK VERSION.jpg"foto da Cafuné - Tek It [Official Audio]">
+                <h3 class="music-nome">Cafuné - Tek It [Official Audio]</h3>
+                <a href="https://youtu.be/T1EJZsaqevU?si=mEvSV-4DL-jH68sd"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+                <a href="https://www.instagram.com/wearecafune"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
+                <a href="Cafuné - Tek It [Official Audio].mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
     
       <span></span>
