--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/ZN FODÁSTICA 2 - TIKTOK VERSION.jpg"foto da Cafuné - Tek It [Official Audio]">
+                <img class="music-imagem" src="imgs/cafuné.jpg"foto da Cafuné - Tek It [Official Audio]">
                 <h3 class="music-nome">Cafuné - Tek It [Official Audio]</h3>
                 <a href="https://youtu.be/T1EJZsaqevU?si=mEvSV-4DL-jH68sd"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
                 <a href="https://www.instagram.com/wearecafune"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
