--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="music-div">
             <img class="music-imagem" src="imgs/hqdefault.jpg" alt="foto da música SWEET DREAMS">
             <h3 class="music-nome">SWEET DREAMS</h3>
-            <a href="https://youtu.be/bG9z-atG7gc?si=k0bz2zyGHvN8bduM"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+            <a href="https://youtu.be/bG9z-atG7gc?si=k0bz2zyGHvN8bduM" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
             <a href="https://www.instagram.com/7cloudsdaily/#"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
             <a href="Eurythmics - Sweet Dreams (Lyrics).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
         </div>
