--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <img class="music-imagem" src="imgs/hqdefault.jpg" alt="foto da música SWEET DREAMS">
             <h3 class="music-nome">SWEET DREAMS</h3>
             <a href="https://youtu.be/bG9z-atG7gc?si=k0bz2zyGHvN8bduM" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+            <a href="/audios/Eurythmics - Sweet Dreams (Lyrics).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             <a href="https://www.instagram.com/7cloudsdaily/#" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
-            <a href="Eurythmics - Sweet Dreams (Lyrics).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
         </div>
        
 
@@ -45,34 +45,34 @@
                 <img class="music-imagem" src="imgs/bye.jpg" alt="foto da música *NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack)">
                 <h3 class="music-nome">*NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack)</h3>
                 <a href="https://youtu.be/2ydCvkxuNm4?si=NzF2J1uBR9ockIcE" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+                <a href="/audios/＊NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack).mp3 class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
                 <a href="https://www.instagram.com/7cloudsdaily/#" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
-                <a href="＊NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
 
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/still.jpg"foto da música Elton John - I'm Still Standing (Lyrics)">
+                <img class="music-imagem" src="imgs/still.jpg" alt="foto da música Elton John - I'm Still Standing (Lyrics)">
                 <h3 class="music-nome">Elton John - I'm Still Standing (Lyrics)</h3>
                 <a href="https://youtu.be/MJ_aPtt4U8M?si=6U8P1LKhYlNnYEee" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+                <a href="/audios/Elton John - I'm Still Standing (Lyrics).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
                 <a href="https://www.instagram.com/jvbsucks/" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
-                <a href="Elton John - I'm Still Standing (Lyrics).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
 
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/setor.jpg"foto da música VAPO NO SETOR">
+                <img class="music-imagem" src="imgs/setor.jpg" alt="foto da música VAPO NO SETOR">
                 <h3 class="music-nome">VAPO NO SETOR</h3>
                 <a href="https://youtu.be/997Md4VggDs?si=zNkBTufn4cZe8q81" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
-                <a href="https://www.instagram.com/djanxvarr/" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
                 <a href="VAPO NO SETOR.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+                <a href="https://www.instagram.com/djanxvarr/" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
             </div>
 
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/honey pie.jpg"foto da JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation ‪@JAWNY‬">
+                <img class="music-imagem" src="imgs/honey pie.jpg" alt="foto da JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation ‪@JAWNY‬">
                 <h3 class="music-nome">JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation ‪@JAWNY‬</h3>
                 <a href="https://youtu.be/mcYLzu_1cNc?si=Rcb2hWufDSxt2LeM" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
                 <a href="https://www.instagram.com/seanway_studio/" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
@@ -82,7 +82,7 @@
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/my ordinary life.jpg"foto da The Living Tombstone - My Ordinary Life (Lyrics/Vietsub)">
+                <img class="music-imagem" src="imgs/my ordinary life.jpg" alt="foto da The Living Tombstone - My Ordinary Life (Lyrics/Vietsub)">
                 <h3 class="music-nome">The Living Tombstone - My Ordinary Life (Lyrics/Vietsub)</h3>
                 <a href="https://youtu.be/H_6JU6vJMS0?si=LeWXD1IcIOlGCDYK" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a> 
                 <a href="The Living Tombstone - My Ordinary Life (Lyrics⧸Vietsub).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
@@ -91,7 +91,7 @@
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/life.jpg"foto da Street Corner Renaissance - Life Could Be A Dream">
+                <img class="music-imagem" src="imgs/life.jpg" alt="foto da Street Corner Renaissance - Life Could Be A Dream">
                 <h3 class="music-nome">Street Corner Renaissance - Life Could Be A Dream</h3>
                 <a href="https://youtu.be/n-miJQUD9l4?si=LbGlfyEpFVRop-Jk" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>               
                 <a href="Street Corner Renaissance - Life Could Be A Dream.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
@@ -100,7 +100,7 @@
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/mett.jpg"foto da MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED]">
+                <img class="music-imagem" src="imgs/mett.jpg" alt="foto da MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED]">
                 <h3 class="music-nome">MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED]</h3>
                 <a href="https://youtu.be/5UtVzb8ZkmY?si=C3HfAPcmPqdN6up6" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
                 <a href="https://www.instagram.com/ikalcetoo/" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
@@ -110,7 +110,7 @@
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/spook.jpg"foto da fennecxx, DJ ALEX - SPOOKY (Official Music)">
+                <img class="music-imagem" src="imgs/spook.jpg" alt="foto da fennecxx, DJ ALEX - SPOOKY (Official Music)">
                 <h3 class="music-nome">fennecxx, DJ ALEX - SPOOKY (Official Music)</h3>
                 <a href="https://youtu.be/Yw2g6_uySOA?si=FBEVOF_9otNegvXh" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
                 <a href="https://www.instagram.com/fennecxx" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
@@ -120,7 +120,7 @@
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/ZN FODÁSTICA 2 - TIKTOK VERSION.jpg"foto da ZN FODÁSTICA 2 - TIKTOK VERSION">
+                <img class="music-imagem" src="imgs/ZN FODÁSTICA 2 - TIKTOK VERSION.jpg" alt="foto da ZN FODÁSTICA 2 - TIKTOK VERSION">
                 <h3 class="music-nome">ZN FODÁSTICA 2 - TIKTOK VERSION</h3>
                 <a href="https://youtu.be/DhbNBA4gBM0?si=jqbJ7cENulqAdGC1" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>        
                 <a href="ZN FODÁSTICA 2 - TIKTOK VERSION.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
@@ -129,7 +129,7 @@
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/cafuné.jpg"foto da Cafuné - Tek It [Official Audio]">
+                <img class="music-imagem" src="imgs/cafuné.jpg" alt="foto da Cafuné - Tek It [Official Audio]">
                 <h3 class="music-nome">Cafuné - Tek It [Official Audio]</h3>
                 <a href="https://youtu.be/T1EJZsaqevU?si=mEvSV-4DL-jH68sd" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
                 <a href="https://www.instagram.com/wearecafune" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
