--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/mett.jpg" alt="foto da MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED]">
+                <img class="music-imagem" src="img/mett.jpg" alt="foto da MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED]">
                 <h3 class="music-nome">MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED]</h3>
                 <a href="https://youtu.be/5UtVzb8ZkmY?si=C3HfAPcmPqdN6up6" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
                 <a href="/audios/MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED].mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
@@ -110,7 +110,7 @@
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/spook.jpg" alt="foto da fennecxx, DJ ALEX - SPOOKY (Official Music)">
+                <img class="music-imagem" src="img/spook.jpg" alt="foto da fennecxx, DJ ALEX - SPOOKY (Official Music)">
                 <h3 class="music-nome">fennecxx, DJ ALEX - SPOOKY (Official Music)</h3>
                 <a href="https://youtu.be/Yw2g6_uySOA?si=FBEVOF_9otNegvXh" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
                 <a href="/audios/fennecxx, DJ ALEX - SPOOKY (Official Music).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
@@ -120,7 +120,7 @@
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/ZN FODÁSTICA 2 - TIKTOK VERSION.jpg" alt="foto da ZN FODÁSTICA 2 - TIKTOK VERSION">
+                <img class="music-imagem" src="img/ZN FODÁSTICA 2 - TIKTOK VERSION.jpg" alt="foto da ZN FODÁSTICA 2 - TIKTOK VERSION">
                 <h3 class="music-nome">ZN FODÁSTICA 2 - TIKTOK VERSION</h3>
                 <a href="https://youtu.be/DhbNBA4gBM0?si=jqbJ7cENulqAdGC1" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>        
                 <a href="/audios/ZN FODÁSTICA 2 - TIKTOK VERSION.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
@@ -129,13 +129,13 @@
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/cafuné.jpg" alt="foto da Cafuné - Tek It [Official Audio]">
+                <img class="music-imagem" src="img/cafuné.jpg" alt="foto da Cafuné - Tek It [Official Audio]">
                 <h3 class="music-nome">Cafuné - Tek It [Official Audio]</h3>
                 <a href="https://youtu.be/T1EJZsaqevU?si=mEvSV-4DL-jH68sd" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
                 <a href="/audios/Cafuné - Tek It [Official Audio].mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
                 <a href="https://www.instagram.com/wearecafune" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
             </div>
-    
+        </div>
 
 
       <span></span>
