--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2 class="music-titulo">Quais são nossas músicas do momento?</h2>
       
         <div class="music-div">
-            <img class="music-imagem" src="imgs/hqdefault.jpg" alt="foto da música SWEET DREAMS">
+            <img class="music-imagem" src="img/hqdefault.jpg" alt="foto da música SWEET DREAMS">
             <h3 class="music-nome">SWEET DREAMS</h3>
             <a href="https://youtu.be/bG9z-atG7gc?si=k0bz2zyGHvN8bduM" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
             <a href="/audios/Eurythmics - Sweet Dreams (Lyrics).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
@@ -42,7 +42,7 @@
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/bye.jpg" alt="foto da música *NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack)">
+                <img class="music-imagem" src="img/bye.jpg" alt="foto da música *NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack)">
                 <h3 class="music-nome">*NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack)</h3>
                 <a href="https://youtu.be/2ydCvkxuNm4?si=NzF2J1uBR9ockIcE" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
                 <a href="/audios/＊NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack).mp3 class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
@@ -52,7 +52,7 @@
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/still.jpg" alt="foto da música Elton John - I'm Still Standing (Lyrics)">
+                <img class="music-imagem" src="img/still.jpg" alt="foto da música Elton John - I'm Still Standing (Lyrics)">
                 <h3 class="music-nome">Elton John - I'm Still Standing (Lyrics)</h3>
                 <a href="https://youtu.be/MJ_aPtt4U8M?si=6U8P1LKhYlNnYEee" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
                 <a href="/audios/Elton John - I'm Still Standing (Lyrics).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
@@ -62,7 +62,7 @@
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/setor.jpg" alt="foto da música VAPO NO SETOR">
+                <img class="music-imagem" src="img/setor.jpg" alt="foto da música VAPO NO SETOR">
                 <h3 class="music-nome">VAPO NO SETOR</h3>
                 <a href="https://youtu.be/997Md4VggDs?si=zNkBTufn4cZe8q81" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
                 <a href="/audios/VAPO NO SETOR.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
@@ -72,7 +72,7 @@
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/honey pie.jpg" alt="foto da JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation ‪@JAWNY‬">
+                <img class="music-imagem" src="img/honey pie.jpg" alt="foto da JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation ‪@JAWNY‬">
                 <h3 class="music-nome">JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation ‪@JAWNY‬</h3>
                 <a href="https://youtu.be/mcYLzu_1cNc?si=Rcb2hWufDSxt2LeM" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>EndrewTwT/laout-2C
                 <a href="/audios/JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation @JAWNY.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
@@ -82,7 +82,7 @@
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/my ordinary life.jpg" alt="foto da The Living Tombstone - My Ordinary Life (Lyrics/Vietsub)">
+                <img class="music-imagem" src="img/my ordinary life.jpg" alt="foto da The Living Tombstone - My Ordinary Life (Lyrics/Vietsub)">
                 <h3 class="music-nome">The Living Tombstone - My Ordinary Life (Lyrics/Vietsub)</h3>
                 <a href="https://youtu.be/H_6JU6vJMS0?si=LeWXD1IcIOlGCDYK" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a> 
                 <a href="/audios/The Living Tombstone - My Ordinary Life (Lyrics⧸Vietsub).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
@@ -91,7 +91,7 @@
 
 
             <div class="music-div">
-                <img class="music-imagem" src="imgs/life.jpg" alt="foto da Street Corner Renaissance - Life Could Be A Dream">
+                <img class="music-imagem" src="img/life.jpg" alt="foto da Street Corner Renaissance - Life Could Be A Dream">
                 <h3 class="music-nome">Street Corner Renaissance - Life Could Be A Dream</h3>
                 <a href="https://youtu.be/n-miJQUD9l4?si=LbGlfyEpFVRop-Jk" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>               
                 <a href="/audios/Street Corner Renaissance - Life Could Be A Dream.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
