--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2 class="estudante-titulo">Quem são os participantes do elenco?</h2>
         <div class="estudante-todos">
             <div class="estudante-div">
-                <img class="estudante-imagem" src="img/poliana.jpg" alt="Foto da Poliana">
+                <img class="estudante-imagem" src="img/hqdefault.jpg" alt="Foto da música Sweet Dreams">
                 <h3 class="estudante-nome">Poliana</h3>
                 <a href="https://asaventurasdepoliana.blogspot.com/p/elenco.html"><img class="estudante-icone" src="img/discord.png" alt="Sobre a integrante"></a>
                 <a href="https://asaventurasdepoliana.blogspot.com/p/clipes.html"><img class="estudante-icone" src="img/youtube.png" alt="icone linkedin"></a>   
