--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         <h2 class="estudante-titulo">Quem são os participantes do elenco?</h2>
         <div class="estudante-todos">
             <div class="estudante-div">
-                <img class="estudante-imagem" src="img/hqdefault.jpg" alt="Foto da música Sweet Dreams">
-                <h3 class="estudante-nome">Poliana</h3>
-                <a href="https://asaventurasdepoliana.blogspot.com/p/elenco.html"><img class="estudante-icone" src="img/discord.png" alt="Sobre a integrante"></a>
-                <a href="https://asaventurasdepoliana.blogspot.com/p/clipes.html"><img class="estudante-icone" src="img/youtube.png" alt="icone linkedin"></a>   
+                <img class="estudante-imagem" src="default.jpgimg/hq" alt="Foto da música SWEET DREAMS">
+                <h3 class="estudante-nome">SWEET DREAMS</h3>
+                <a href="https://youtu.be/bG9z-atG7gc?si=k0bz2zyGHvN8bduM" target="_blank"><img class="estudante-icone" src="img/youtube-logo.png" alt="icone youtube"></a>
+                <a href="/codigo/audios/Eurythmics - Sweet Dreams (Lyrics).mp3" download><img class="estudante-icone" src="img/downloads.png" alt="icone download"></a>   
+                <a href="https://www.instagram.com/7cloudsdaily/#" download><img class="estudante-icone" src="img/instagram.png" alt="icone instagram"></a>
             </div>
        
         <div class="estudante-div">
