--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>As aventuras de Poliana</title>
+    <title>THE BEST MUSIC</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,14 +15,16 @@
         <img class="cabecalho-alura" src="" alt="">
         <img class="cabecalho-imagem" src="img/Logo_de_As_Aventuras_de_Poliana.png" alt="Logo da novela">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Novela</li>
-            <li class="cabecalho-lista-item">SBT</li>
+            <li class="cabecalho-lista-item">BEEST</li>
+            <li class="cabecalho-lista-item">MUSIC</li>
         </ul>
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">As aventuras de poliana</h2>
-            <p class="escola-texto-um">As Aventuras de Poliana é uma telenovela brasileira que foi produzida e exibida pelo SBT em 16 de maio de 2018 até 13 de julho de 2020 em 564 capítulos. Substituiu Carinha de Anjo e foi substituída pela reprise de Chiquititas, por causa dos impactos da COVID-19. Originalmente seria substituída por Poliana Moça.</p>
+            <h2 class="escola-titulo">THE BEST MUSIC</h2>
+            <p class="escola-texto-um">  O "THE BEST MUSIC" tem como objetivo mostras os DOWNLOADS das melhores músicas do momento.
+                Caso sua música não esteja aqui não se entristeça pois ela pode ser adicionada.
+                My instagram "blizzard_end"👻</p>
         
     </section>
     <section class="estudante">
