--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
     </section>
     <section class="estudante">
-        <h2 class="estudante-titulo">Quem são os participantes do elenco?</h2>
+        <h2 class="estudante-titulo">Quais são nossas músicas do momento?</h2>
         <div class="estudante-todos">
             <div class="estudante-div">
                 <img class="estudante-imagem" src="default.jpgimg/hq" alt="Foto da música SWEET DREAMS">
