--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h3 class="estudante-nome">*NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack)</h3>
             <a href="https://youtu.be/2ydCvkxuNm4?si=NzF2J1uBR9ockIcE"><img class="estudante-icone" src="img/discord.png" alt="icone github"></a>
             <a href="/codigo/audios/＊NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack).mp3" download><img class="estudante-icone" src="img/youtube.png" alt="icone linkedin"></a>
-        
+            <a href="https://www.instagram.com/7cloudsdaily/#" target="_blank"><img class="estudante-icone" src="img/instagram.png" alt="icone instagram"></a>
         </div>
         
         <div class="estudante-div">
