--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         </div>
         
         <div class="estudante-div">
-            <img class="estudante-imagem" src="img/Marcelo.jpg" alt="foto do Marcelo">
-            <h3 class="estudante-nome">Marcelo Pessoa</h3>
-            <a href="https://asaventurasdepoliana.blogspot.com/p/elenco.html"><img class="estudante-icone" src="img/discord.png" alt="icone youtube"></a>
-            <a href="https://asaventurasdepoliana.blogspot.com/p/clipes.html"><img class="estudante-icone" src="img/youtube.png" alt="icone download"></a>   
-            <a href="https://www.instagram.com/7cloudsdaily/#" target="_blank"><img class="estudante-icone" src="img/instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="img/Marcelo.jpg" alt="foto da música Elton John - I'm Still Standing (Lyrics)">
+            <h3 class="estudante-nome">Elton John - I'm Still Standing (Lyrics)</h3>
+            <a href="https://youtu.be/MJ_aPtt4U8M?si=6U8P1LKhYlNnYEee"><img class="estudante-icone" src="img/discord.png" alt="icone youtube"></a>
+            <a href="/audios/Elton John - I'm Still Standing (Lyrics).mp3"><img class="estudante-icone" src="img/youtube.png" alt="icone download"></a>   
+            <a href="https://www.instagram.com/jvbsucks/" target="_blank"><img class="estudante-icone" src="img/instagram.png" alt="icone instagram"></a>
         </div>
         
         <div class="estudante-div">
