--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         
         <div class="estudante-div">
-            <img class="estudante-imagem" src="img/Marcelo.jpg" alt="foto da música Elton John - I'm Still Standing (Lyrics)">
+            <img class="estudante-imagem" src="/img/still.jpg" alt="foto da música Elton John - I'm Still Standing (Lyrics)">
             <h3 class="estudante-nome">Elton John - I'm Still Standing (Lyrics)</h3>
             <a href="https://youtu.be/MJ_aPtt4U8M?si=6U8P1LKhYlNnYEee"><img class="estudante-icone" src="img/discord.png" alt="icone youtube"></a>
             <a href="/audios/Elton John - I'm Still Standing (Lyrics).mp3"><img class="estudante-icone" src="img/youtube.png" alt="icone download"></a>   
