--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
        
         <div class="estudante-div">
             <img class="estudante-imagem" src="/img/bye.jpg" alt="foto da música *NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack)">
-            <h3 class="estudante-nome">*NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack)</h3>
+            <h3 class="estudante-nome">*NSYNC - Bye Bye Bye (Lyrics)</h3>
             <a href="https://youtu.be/2ydCvkxuNm4?si=NzF2J1uBR9ockIcE"><img class="estudante-icone" src="/img/youtube-logo.png" alt="icone youtube"></a>
             <a href="/codigo/audios/＊NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack).mp3" download><img class="estudante-icone" src="/img/downloads.png" alt="icone download"></a>
             <a href="https://www.instagram.com/7cloudsdaily/#" target="_blank"><img class="estudante-icone" src="/img/instagram.png" alt="icone instagram"></a>
