--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <img class="estudante-imagem" src="/img/hqdefault.jpg" alt="Foto da música SWEET DREAMS">
                 <h3 class="estudante-nome">SWEET DREAMS</h3>
                 <a href="https://youtu.be/bG9z-atG7gc?si=k0bz2zyGHvN8bduM" target="_blank"><img class="estudante-icone" src="img/youtube-logo.png" alt="icone youtube"></a>
-                <a href="/codigo/audios/Eurythmics - Sweet Dreams (Lyrics).mp3" download><img class="estudante-icone" src="img/downloads.png" alt="icone download"></a>   
+                <a href="/codigo/audios/Eurythmics - Sweet Dreams (Lyrics).mp3" download><img class="estudante-icone" src="/img/downloads.png" alt="icone download"></a>   
                 <a href="https://www.instagram.com/7cloudsdaily/#" target="_blank><img class="estudante-icone" src="/img/instagram.png" alt="icone instagram"></a>
             </div>
        
