--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
       
         <div class="estudante-div">
-            <img class="estudante-imagem" src="img/Antonio.jpg" alt="foto da música JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) animation JAWNY">
+            <img class="estudante-imagem" src="/img/honey pie.jpg" alt="foto da música JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) animation JAWNY">
             <h3 class="estudante-nome">JAWNY - Honeypie Animation MV</h3>
             <a href="https://youtu.be/mcYLzu_1cNc?si=Rcb2hWufDSxt2LeM" target="_blank"><img class="estudante-icone" src="/img/youtube-logo.png" alt="icone youtube"></a>
             <a href="/audios/JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation @JAWNY.mp3" download><img class="estudante-icone" src="/img/downloads.png" alt="icone download"></a>   
