--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
         </div>
         
         <div class="estudante-div">
-            <img class="estudante-imagem" src="img/raquel.jpg" alt="foto da raquel">
-            <h3 class="estudante-nome">Raquel D'ávila</h3>
-            <a href="https://asaventurasdepoliana.blogspot.com/p/elenco.html"><img class="estudante-icone" src="/img/youtube-logo.png" alt="icone youtube"></a>
-            <a href="https://asaventurasdepoliana.blogspot.com/p/clipes.html"><img class="estudante-icone" src="/img/downloads.png" alt="icone download"></a>
+            <img class="estudante-imagem" src="/img/life.jpg" alt="foto da música Street Corner Renaissance - Life Could Be A Dream">
+            <h3 class="estudante-nome">Street Corner Renaissance - Life Could Be A Dream</h3>
+            <a href="https://youtube.com/isabelleribeiro10" target="_blank""><img class="estudante-icone" src="/img/youtube-logo.png" alt="icone youtube"></a>
+            <a href="/audios/Street Corner Renaissance - Life Could Be A Dream.mp3" download><img class="estudante-icone" src="/img/downloads.png" alt="icone download"></a>
 
         </div>
        
