--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         
         <div class="estudante-div">
-            <img class="estudante-imagem" src="/img/life.jpg" alt="foto da música The Living Tombstone - My Ordinary Life (Lyrics/Vietsub)">
+            <img class="estudante-imagem" src="/img/my ordinary life.jpg" alt="foto da música The Living Tombstone - My Ordinary Life (Lyrics/Vietsub)">
             <h3 class="estudante-nome">The Living Tombstone - My Ordinary Life (Lyrics/Vietsub)</h3>
             <a href="https://youtu.be/H_6JU6vJMS0?si=LeWXD1IcIOlGCDYK" target="_blank"><img class="estudante-icone" src="/img/youtube-logo.png" alt="icone youtube"></a>
             <a href="/audios/The Living Tombstone - My Ordinary Life (Lyrics⧸Vietsub).mp3" download><img class="estudante-icone" src="/img/downloads.png" alt="icone download"></a>             
